--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finals Lab Task 5 - Views, Stored Procedures and Functions</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sky Ordoña</title>
     <style>
-        /* Import Google Font for the main container */
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
-        /* Main Body - Street Fighter Theme */
+        /* Street Fighter Theme */
         body {
             background-color: #000;
             color: #fff;
@@ -42,57 +39,37 @@
             animation: blink 0.5s infinite;
         }
 
-        /* Main Content Container */
+        /* Main Content */
         .container {
-            max-width: 900px;
+            max-width: 800px;
             margin: 0 auto;
             opacity: 0;
             animation: fadeIn 2s forwards;
             animation-delay: 5s;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 10px;
         }
 
-        /* Section Headers */
-        h1, h2, h3, h4 {
+        h1, h2 {
             color: #ff0;
             text-shadow: 3px 3px #f00;
             text-transform: uppercase;
             text-align: center;
             border-bottom: 2px solid #ff0;
             padding-bottom: 10px;
-            margin-top: 20px;
         }
 
-        /* Download Button Styling */
-        .download-container {
-            text-align: center;
-            margin: 20px 0;
+        .profile-pic {
+            border: 5px solid #ff0;
+            box-shadow: 0 0 20px #f00;
+            transition: transform 0.3s;
         }
 
-        .download-btn {
-            display: inline-block;
-            background: #ff0;
-            color: #000;
-            padding: 15px 30px;
-            border-radius: 5px;
-            text-transform: uppercase;
-            font-weight: bold;
-            transition: all 0.3s;
-            font-size: 18px;
-            text-decoration: none;
+        .profile-pic:hover {
+            transform: scale(1.05);
         }
 
-        .download-btn:hover {
-            background: #f00;
-            color: #fff;
-            transform: scale(1.1);
-        }
-
-        /* List Styles */
-        ol, ul {
-            padding-left: 20px;
+        ul {
+            list-style-type: none;
+            padding: 0;
         }
 
         li {
@@ -109,7 +86,16 @@
             background: rgba(255, 0, 0, 0.3);
         }
 
-        /* Animations for loading and fading */
+        a {
+            color: #ff0;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #f00;
+        }
+
         @keyframes fadeOut {
             from { opacity: 1; }
             to { opacity: 0; visibility: hidden; }
@@ -124,44 +110,7 @@
             50% { opacity: 0; }
         }
 
-        /* Effects for click animations */
-        .click-effect {
-            position: fixed;
-            pointer-events: none;
-            font-family: 'Comic Sans MS', cursive;
-            font-weight: bold;
-            font-size: 2.5em;
-            user-select: none;
-            animation: popAndFade 0.5s ease-out forwards;
-            z-index: 9999;
-            text-transform: uppercase;
-            filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));
-        }
-
-        .effect-pow { color: #FF4136; }
-        .effect-bam { color: #0074D9; }
-        .effect-smash { color: #FFDC00; }
-        .effect-zap { color: #FF851B; }
-        .effect-zonk { color: #B10DC9; }
-        .effect-boom { color: #FF4136; }
-
-        @keyframes popAndFade {
-            0% {
-                transform: scale(0.5) rotate(-5deg);
-                opacity: 0;
-            }
-            25% {
-                transform: scale(1.2) rotate(5deg);
-                opacity: 1;
-            }
-            50% {
-                transform: scale(1) rotate(-2deg);
-            }
-            100% {
-                transform: scale(1.1) rotate(0);
-                opacity: 0;
-            }
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
     </style>
 </head>
 <body>
