--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sky Ordoña</title>
+    <title>Finals Lab Task 3-1 - Using MYSQL Clause</title>
     <style>
         /* Street Fighter Theme */
         body {
@@ -46,6 +46,14 @@
             opacity: 0;
             animation: fadeIn 2s forwards;
             animation-delay: 5s;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .download-container {
+            text-align: center;
+            margin: 20px 0;
         }
 
         h1, h2 {
@@ -57,19 +65,34 @@
             padding-bottom: 10px;
         }
 
-        .profile-pic {
-            border: 5px solid #ff0;
-            box-shadow: 0 0 20px #f00;
-            transition: transform 0.3s;
+        img {
+            max-width: 100%;
+            border: 3px solid #ff0;
+            margin: 10px 0;
+            box-shadow: 0 0 10px #f00;
         }
 
-        .profile-pic:hover {
-            transform: scale(1.05);
+        .download-btn {
+            display: inline-block;
+            background: #ff0;
+            color: #000;
+            padding: 15px 30px;
+            border-radius: 5px;
+            text-transform: uppercase;
+            font-weight: bold;
+            transition: all 0.3s;
+            font-size: 18px;
+            text-decoration: none;
         }
 
-        ul {
-            list-style-type: none;
-            padding: 0;
+        .download-btn:hover {
+            background: #f00;
+            color: #fff;
+            transform: scale(1.1);
+        }
+
+        ol, ul {
+            padding-left: 20px;
         }
 
         li {
@@ -84,16 +107,6 @@
         li:hover {
             transform: translateX(10px);
             background: rgba(255, 0, 0, 0.3);
-        }
-
-        a {
-            color: #ff0;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        a:hover {
-            color: #f00;
         }
 
         @keyframes fadeOut {
