--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finals Lab Task 3-1 - Using MYSQL Clause</title>
+    <title>Finals Lab Task 5 - Views, Stored Procedures and Functions</title>
     <style>
         /* Street Fighter Theme */
         body {
